# pinn-vs-fem-1d-bar

./: .gitignore  Makefile  README.md  env.yml  pyproject.toml
assets/: figstyle.mplstyle
examples/: body_force.yaml  hetero_robin.yaml  tip_load_extrapolate.yaml  tip_load_inrange.yaml
src/: __init__.py
src/core/: __init__.py  fem.py  physics.py  pinn.py  utils.py
src/experiments/: __init__.py  compare_bb_vs_pinn.py  data_gen.py  run_from_config.py  sweep_metrics.py
src/training/: __init__.py  eval_blackbox.py  run_fem.py  run_pinn.py  train_blackbox.py
src/visualization/: __init__.py  animate_losses.py  animate_predictions.py  hero_figure.py  plot.py  plot_metrics.py
tests/: test_physics.py  test_shapes.py
